--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "resolve": "^1.20.0",
     "resolve-url-loader": "^4.0.0",
     "sass-loader": "^12.6.0",
+    "sass-resources-loader": "^2.2.5",
     "semver": "^7.3.5",
     "source-map-loader": "^3.0.0",
     "style-loader": "^3.3.1",
